add parseDate and makeBooked in Booking class

--- a/src/db/app.json
+++ b/src/db/app.json
@@ -255,5 +255,14 @@
       "starters": ["lemonWater"]
     }
   ],
-  "booking": []
+  "booking": [{
+    "id": 5,
+      "date": "2020-01-22",
+      "hour": "18:00",
+      "table": 2,
+      "repeat": "daily",
+      "duration": 2,
+      "ppl": 3,
+      "starters": ["lemonWater"]
+  }]
 }
